@@ -1,2 +1,4 @@
 <input tal:attributes="checked field.widget.checked(field) and True or False"
        id="${field.cssname}" type="checkbox" name="${field.name}" value="True"/>
+<span tal:condition="hasattr(field.widget, 'checkbox_label')"
+      tal:replace="field.widget.checkbox_label" />
